SERVER-72441 Named Pipes: Suppress misleading "error" message from SERVER-70970